# kern

./: Makefile  README.md  pyproject.toml
src/drivers/: __init__.py  input.py
src/drivers/html/: __init__.py  html.py  main.py
src/drivers/image/: __init__.py  image_and_text.py  main.py
src/drivers/pdf/: __init__.py  main.py
src/kern/pdf/: lib.py
src/kern/video/: __init__.py  lib.py
tests/: test_doc.py  test_html.py  test_image.py  test_package.py  test_pdf.py  test_video.py
